--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-dist/
 *.egg-info
-*.pyc# On branch master
-build/
-setup.cfg
+*.mo
+*.pyc
+.installed.cfg
+.mr.developer.cfg
+.plone.versioncheck.tracked.json
+.project
+.pydevproject
+.settings/
+bin/
+buildout-cache/
+develop-eggs/
+dist/
+include/
+lib/
+local/
+parts/
+var/
+.coverage
+pyvenv.cfg
